fixed width issue on mobile

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -33,7 +33,9 @@
     }
   }
 
-  h2,h3,h4,h5,h6 {
+  h2,h3,h4,h5,h6,b,
+  optgroup,
+  strong {
     font-weight: bolder;
   }
 
@@ -63,12 +65,6 @@
 
   h6 {
     font-size: 0.75em;
-  }
-
-  b,
-  optgroup,
-  strong {
-    font-weight: bolder;
   }
 
   a {
@@ -237,6 +233,9 @@ figure {
 
 @media screen and (max-width: $mobile-breakpoint) {
   .markdown {
+
+    width:100%;
+
     p,
     h2,
     h3,
@@ -249,5 +248,11 @@ figure {
     div {
     max-width: 100%;
     }
+    h1 {
+    font-size: 4em;
+  }
+  }
+  html,body {
+    overflow-x:hidden;
   }
 }
